Added content_type to the blimp-constants.properties. Added CONTENT-TYPE to BlimpHttpHeaders. Eliminated all readonly fields from all beans following documentation schemas. Added the post, put, and patch methods to Blimp.

--- a/src/main/resources/blimp-constants.properties
+++ b/src/main/resources/blimp-constants.properties
@@ -18,17 +18,19 @@
 ########################################################################################################################
 
 # Blimp resources/endpoints
-base_url = https://app.getblimp.com/api/v2/
-company_endpoint = company/
-project_endpoint = project/
-goal_endpoint = goal/
-task_endpoint = task/
-comment_endpoint = comment/
-file_endpoint = file/
-user_endpoint = user/
-schema_endpoint = schema/
+base_url = https://app.getblimp.com
+base_api_uri = /api/v2
+company_endpoint = /company/
+project_endpoint = /project/
+goal_endpoint = /goal/
+task_endpoint = /task/
+comment_endpoint = /comment/
+file_endpoint = /file/
+user_endpoint = /user/
+schema_endpoint = /schema/
 
 # Blimp custom headers
 auth_header = Authorization
 appid_header = X_BLIMP_APPID
 appsecret_header = X_BLIMP_SECRET
+content_type = application/json
